--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -158,10 +158,114 @@ body {
   font-weight: bolder;
 }
 
-.reap-dashboard-empty-chart {
-/*  width: 90%;
-  height: 300px;
-  border: 1px solid gray;*/
+.reap-index-col {
+  padding: 0 10px;
+  margin-top: 40px;
+}
+
+.reap-index-col h3 {
+  margin: 0 auto;
+}
+
+.reap-index-col .carousel-indicators {
+  margin: 0 auto;
+  top: -30px;
+  left: 0;
+  position: relative;
+}
+
+.reap-dashboard-row .carousel-dot-control {
+  border-color: #428bca;
+  background-color: white;
+}
+
+.reap-dashboard-row .carousel-dot-control.active, .reap-dashboard-row .carousel-dot-control:hover {
+  background-color: #428bca;
+}
+
+.reap-dashboard-row a.carousel-control {
+  margin: 0 10px;
+  width: 30px;
+  color: white;
+  background-image: none;
+  /*background-color: #eeeeee*/
+}
+
+.reap-dashboard-row .highcharts-container {
+  margin: auto;
+}
+
+.reap-index-col .item {
+  min-height: 300px;
+}
+
+.reap-index-col .text-container {
+  margin-bottom: 50px;
+}
+
+.reap-index-col .dashboard-chevron {
+  color: #428bca;
+}
+
+.reap-index-col .left.carousel-control {
+  margin-right: 0;
+}
+
+.reap-dashboard-row h3 {
+  font-size: 22px;
+  margin-bottom: 5px;
+}
+
+.reap-dashboard-row h4 {
+  font-size: 16px;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.row.cities-table{
+  margin-top: 30px;
+}
+
+table {
+  margin: 0 auto;
+  width: 90%;
+  border: 1px solid #428bca;;
+  padding: 2px 10px;*/
+}
+
+thead {
+  background-color: #428bca;
+  color: white;
+  font-weight: bolder;
+  font-size: 1.1em;
+}
+
+th, td {
+  padding: 2px 5px;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+.primary-metrics-table {
+  width: 70%;
+  margin: auto auto 40px auto;
+  font-size: 1.1em;
+}
+
+.text-container {
+  margin-left: 80px;
+}
+
+.text-container h3 {
+  text-align: left;
+}
+
+.text-container ul > li {
+  padding: 2px;
+  font-size: 1.2em;
 }
 
 .dashboard-block-1 {
@@ -171,7 +275,7 @@ body {
   border-radius: 20px;
   text-align: center;
   background-color: #428bca;
-  padding: 10px 5px 20px 5px;
+  padding: 20px 5px 20px 5px;
 }
 
 .row.dashboard-team-row {
@@ -192,10 +296,10 @@ body {
 }
 
 .dashboard-team-member {
-  width: 100%;
+  width: 95%;
   border-radius: 50px;
   height: 90px;
-  width: 90px;
+  max-width: 90px;
   padding: 25px 5px 5px 5px;
   text-align: center;
   margin-bottom: 10px;
@@ -480,6 +584,10 @@ h1 {
 
 .dark-blue-reap {
 	background-color: rgb(37,132,184);
+}
+
+.chart-blue-reap {
+  background-color: #428bca;
 }
 
 .red-reap {
@@ -6238,7 +6346,8 @@ h2.icap {
 .pentacle-img {
 	max-width:96%;
   max-height:80%;
-  padding-top: 2%;
+  margin:0;
+  padding:0;
 }
 
 #pentacle-column {
@@ -6250,8 +6359,6 @@ h2.icap {
 }
 
 #pentacle-highlight {
-  width: 100px;
-  height: 100px;
   border: 4px solid rgb(183,20,96);
   border-radius: 50%;
   position: absolute;
