--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,8 +77,8 @@ body {
 }
 
 #resource-main-panel {
-  margin-left:auto;
-  margin-right:auto;
+  margin-left:10px;
+  margin-right:10px;
 }
 
 #resource-links {
