Made dashboard header the same as that of other pages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -424,15 +424,7 @@ input.dashboard-sm-btn:hover, input.dashboard-sm-btn:focus {
   margin-top:85px
 }
 
-#resources-jumbo {
-  margin-bottom: 0px;
-}
-
-#dashboard-jumbo h1 {
-  margin: 5px auto;
-}
-
-#dashboard-jumbo {
+#resources-jumbo, #dashboard-jumbo {
   margin-bottom: 0px;
 }
 
