Modified download button and fontSize of 'source' in REAP dashboard charts

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6403,6 +6403,11 @@ h2.icap {
   margin-right:10px;
 }
 
+#dashboard-main-panel hr {
+  margin: 5px auto;
+  border-top: 1px solid #aaa;
+}
+
 .dashboard-panel {
   margin:10px auto 10px auto;
   padding-bottom: 15px;
