--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6554,7 +6554,7 @@ h2.icap {
   }
 }
 
-#dashboard-prompt {
+#dashboard-home {
   display: none;
   text-align: center;
   font-size: 2em;
@@ -6563,15 +6563,15 @@ h2.icap {
   margin-top: 30px;
 }
 
-#dashboard-prompt .partner-country-index-2 {
+#dashboard-home .partner-country-index-2 {
   background-color: #999;
 }
 
-#dashboard-prompt .partner-country-index-2:hover {
+#dashboard-home .partner-country-index-2:hover {
   background-color: rgb(37,132,184);
 }
 
-#dashboard-prompt a {
+#dashboard-home a {
   text-decoration: none;
 }
 
